<package>
  <name>sr_utilities</name>
  <version>1.2.0</version>
  <description>sr_utilities contains different useful header libraries (math libraries, etc...).</description>
  <maintainer email="">Ugo Cupcic</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_utilities</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>sr_robot_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -lsr_calibration" cflags="-I${prefix}/include"/>
</export>

</package>